# torchrec-KGCN

./: .flake8  README.md  pyproject.toml  setup.cfg
src/torchrec_kgcn/: __init__.py
